<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPatientLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvPatientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_panel"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primaryDark"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPatientInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPatientTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/training_details"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvTrainingDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/training_duration_label"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvBestCadence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_cadence_label"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvCurrentMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selected_music"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnStartTraining"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_training"
        android:textSize="18sp"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_start_training"
        android:drawablePadding="8dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvPatientInfo" />

    <Button
        android:id="@+id/btnSelectMusic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_music"
        android:textSize="18sp"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_music"
        android:drawablePadding="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartTraining" />

    <Button
        android:id="@+id/btnBack"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
