<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainTrainingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTrainingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_session"
        style="@style/AppTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textSize="72sp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrainingTitle" />

    <ProgressBar
        android:id="@+id/pbTrainingProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimer" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTrainingInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbTrainingProgress">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/training_info"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvCurrentCadence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_cadence_value"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvTargetCadence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/target_cadence_value"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvMusicGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_genre_value"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTrainingInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/training_instructions"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvTrainingInfo" />

    <Button
        android:id="@+id/btnStopTraining"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_training"
        style="@style/PrimaryButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
