<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/tvAppDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvAppDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        style="@style/DescriptiveText"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/llButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppDescription">

        <Button
            android:id="@+id/btnPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_mode"
            style="@style/SelectionButton"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background" />

        <Button
            android:id="@+id/btnClinician"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clinician_mode"
            style="@style/SelectionButton"
            android:background="@drawable/button_background" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
